Setup some client and server remote requests
This sets up some basic client side and server side remote requests. On
the client side we use JSONP, through jQuery, to hit the public
non-authenticated GitHub API. This returns the meta information for the
API. As it's non-authenticated it makes a good test case for simplistic
JSONP usage. On the server side, we just use the built-in `Net::HTTP`
lib as it's convenient.

Note that these base system tests **will** hit the network. In order to
run them you must be connected. We make this clear by tagging them with
conditional RSpec metadata which only runs if a networks is available.

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -2,6 +2,16 @@
 
 <h1>Books</h1>
 
+<p>
+  <h2>GitHub JSONP</h2>
+  <pre id="github"></pre>
+</p>
+
+<p>
+  <h2>Server Side JS</h2>
+  <pre id="serverjs"></pre>
+</p>
+
 <table>
   <thead>
     <tr>
@@ -27,3 +37,7 @@
 <br>
 
 <%= link_to 'New Book', new_book_path %>
+<%= link_to 'New Redirect Book', new_book_path(redirect: true) %>
+<%= link_to 'New SSL Book', new_book_path(redirect: :ssl) %>
+
+<%= button_to "All Books", books_path, method: :get, remote: true %>
